--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -1,5 +1,3 @@
-# Very basic GitHub Action workflow, goes in ~/.github/workflows/deploy.yaml
-
 name: CI
 
 # Controls when the workflow will run
@@ -33,8 +31,15 @@ jobs:
         run: |
           ~/bin/snowsql --version
 
-      # Run a SnowSQL Command using environment variables for Snowflake connection details
-      - name: Run SnowSQL Command
+      # Fetch the latest committed SQL files from the main branch
+      - name: Fetch Latest SQL Files
+        run: |
+          git fetch origin main
+          git checkout origin/main -- *.sql
+          ls -1 *.sql
+
+      # Run SnowSQL commands for each SQL file
+      - name: Execute SQL Files
         env:
           SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
           SNOWSQL_USER: ${{ secrets.SNOWFLAKE_USER }}
@@ -44,6 +49,10 @@ jobs:
         run: |
           ~/bin/snowsql -q "SELECT CURRENT_VERSION();"
           ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
-          ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
-                            USE SCHEMA DEMO_SCHEMA;
-                            EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/SQL_SCRIPT.SQL;"
+
+          for sql_file in *.sql; do
+            echo "Executing $sql_file..."
+            ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
+                              USE SCHEMA DEMO_SCHEMA;
+                              EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$sql_file;"
+          done
