--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -54,7 +54,7 @@ jobs:
           echo "Executing SQL files..."
           # Read the list of files and filter for .sql files
           while IFS= read -r sql_file; do
-            if [[ "$sql_file" == *.sql ]]; then
+            if [[ "$sql_file" == *.SQL ]]; then
               echo "Executing $sql_file..."
               ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
                                 USE SCHEMA DEMO_SCHEMA;
