--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -37,7 +37,13 @@ jobs:
         run: |
           echo "Getting modified SQL files..."
           git fetch origin main  # Fetch latest from remote
-          git diff --name-only HEAD^ HEAD | grep '\.sql$' > modified_files.txt
+          # Check if there's more than one commit in the repository
+          if [ $(git rev-list --count HEAD) -gt 1 ]; then
+            git diff --name-only HEAD^ HEAD | grep '\.sql$' > modified_files.txt
+          else
+            # If there is only one commit, just list .sql files in the current commit
+            git diff --name-only HEAD~1 HEAD | grep '\.sql$' > modified_files.txt || echo "No modified SQL files found."
+          fi
           cat modified_files.txt || echo "No modified SQL files found."
 
       # Run SnowSQL commands for each modified SQL file
