--- a/.github/workflows/CI_CD_PIPELINE.yml
+++ b/.github/workflows/CI_CD_PIPELINE.yml
@@ -1,58 +1,61 @@
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on any branch or tag commit
   push:
     branches:
       - "*"
     tags:
       - "v*"
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
-  # This workflow contains a single job called "deploy"
   deploy:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Fetch full commit history
 
       - name: Install SnowSQL
         run: |
           curl -O https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_x86_64/snowsql-1.2.9-linux_x86_64.bash
           SNOWSQL_DEST=~/bin SNOWSQL_LOGIN_SHELL=~/.profile bash snowsql-1.2.9-linux_x86_64.bash
-
       - name: Check SnowSQL Version
         run: |
           ~/bin/snowsql --version
-
-      # Get list of modified SQL files from the latest commit
-      - name: Get Modified SQL Files
-        id: get_modified_files
+      - name: Get the list of modified SQL scripts
+        id: modified_files
         run: |
-          echo "Getting modified SQL files..."
-          git fetch origin main  # Fetch latest from remote
-
-          # Get the list of modified files in the latest commit
-          modified_files=$(git diff --name-only HEAD~1 HEAD | grep '\.sql$')
-
-          # Check if any modified files were found
-          if [ -z "$modified_files" ]; then
-            echo "No modified SQL files found."
-            echo "::set-output name=modified_files::"  # Set output to empty if no files found
+          # Ensure we handle cases with no previous commit gracefully
+          if git rev-parse HEAD~1 >/dev/null 2>&1; then
+            echo "Fetching modified files between HEAD and previous commit..."
+            # Get the list of modified files between the last two commits
+            git diff --name-only HEAD~1 HEAD > modified_files.txt
           else
-            echo "$modified_files"
-            echo "$modified_files" > modified_files.txt
-            echo "::set-output name=modified_files::$modified_files"  # Set output with the list of files
+            echo "No previous commit. Fetching all committed files in the current commit..."
+            # If no previous commit, get all committed files in the current commit
+            git ls-tree --name-only --full-tree HEAD > modified_files.txt
           fi
-
-      # Run SnowSQL commands for each modified SQL file
-      - name: Execute Modified SQL Files
+          
+          # Show all modified files
+          echo "Modified files:"
+          cat modified_files.txt
+          # Filter only SQL files, and ensure the script continues even if no SQL files are found
+          grep '\.sql$' modified_files.txt > sql_files.txt || true
+          # Debug: Show filtered SQL files
+          if [ -s sql_files.txt ]; then
+            echo "Modified SQL files:"
+            cat sql_files.txt
+          else
+            echo "No SQL files modified."
+          fi
+      - name: Debug SQL files
+        run: |
+          # Print SQL files for debugging
+          echo "SQL files to execute:"
+          cat sql_files.txt || echo "No SQL files found."
+      - name: Run SnowSQL Command
         env:
           SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
           SNOWSQL_USER: ${{ secrets.SNOWFLAKE_USER }}
@@ -60,17 +63,19 @@ jobs:
           SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
           SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
         run: |
-          ~/bin/snowsql -q "SELECT CURRENT_VERSION();"
+          set -e  # Exit on error
+          # Fetch latest from Snowflake repository
           ~/bin/snowsql -q "ALTER GIT REPOSITORY CI_CD_DEMO.DEMO_SCHEMA.snowflake_extensions FETCH;"
-
-          echo "Executing modified SQL files..."
-          if [[ -f modified_files.txt ]]; then
-            while IFS= read -r sql_file; do
-              echo "Executing $sql_file..."
-              ~/bin/snowsql -q "USE DATABASE CI_CD_DEMO;
-                                USE SCHEMA DEMO_SCHEMA;
-                                EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$sql_file;"
-            done < modified_files.txt
+          # Check if sql_files.txt is not empty before proceeding
+          if [ -s sql_files.txt ]; then
+            # Loop through the SQL files and execute
+            while IFS= read -r file; do
+              echo "Running SQL file: $file"
+              ~/bin/snowsql -q "
+                USE DATABASE CI_CD_DEMO;
+                USE SCHEMA DEMO_SCHEMA;
+                EXECUTE IMMEDIATE FROM @snowflake_extensions/branches/main/$file;"
+            done < sql_files.txt
           else
             echo "No SQL files to execute."
           fi
